--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: This package contains the 'lopims' pipeline that was
   orginially available in the 'pRoloc' package.
 License: GPL-2
 Encoding: UTF-8
+Depends: synapter, pRoloc
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
