more misc fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(lopims)
 import(MSnbase)
 import(pRoloc)
 import(synapter)
+importFrom(Biobase,"exprs<-")
 importFrom(stats,median)
 importFrom(utils,packageVersion)
